[tool.poetry]
name = "ain-template"
version = "0.1.0"
description = ""
authors = ["Jeff Labonte <grimsleepless@protonmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
